--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 <div class="apps">
    <a href="POSVTA4/POSV4PASS.html"> POS V4 GENERAL </a>
   </div>
-  
+  <div class="apps">
+   <a href="POSVTA4/subir_equivalentes.html"> equivalente </a>
+  </div>
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
