--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -209,6 +209,7 @@ body {
     <input id="loginUsuario" type="text" placeholder="Usuario"/>
     <input id="loginPassword" type="password" placeholder="Contraseña"/>
     <button id="btnLogin" class="btn">Entrar</button>
+    
     <div id="loginMsg"></div>
   </div>
 
@@ -277,9 +278,30 @@ body {
     <button class="btn" id="btnCobrar">Cobrar</button>
   </div>
 </section>
+<!-- 🧪 BLOQUE DE PRUEBAS DE SISTEMA -->
+<div id="testTools" style="padding:10px;text-align:center;background:#fff;border-radius:12px;
+                           box-shadow:0 2px 8px rgba(0,0,0,0.15);margin:10px;">
+  <h3 style="color:#00416A;margin-bottom:10px;">🔧 Pruebas del Sistema POS</h3>
+
+  <button id="btnTestCam" class="btn" 
+          style="background:linear-gradient(180deg,#0c6cbd,#00416A);margin:6px 0;">
+          📷 Probar Cámara</button><br>
+
+  <button id="btnTestPrinter" class="btn"
+          style="background:linear-gradient(180deg,#16a34a,#0d732e);margin:6px 0;">
+          🖨️ Probar Impresora</button><br>
+
+  <button id="btnTestGPS" class="btn"
+          style="background:linear-gradient(180deg,#f59e0b,#b45309);margin:6px 0;">
+          📍 Probar Geolocalización</button>
+
+  <div id="testResult" style="margin-top:12px;color:#333;font-size:14px;"></div>
+</div>
+
+
 <!-- 📱 BARRA INFERIOR FIJA PARA BOTONES -->
 <div id="bottomBar">
-  <button id="btnVerCarrito" class="bar-btn">🛒 Ver Carrito</button>
+  <button id="btnVerCarrito" class="bar-btn"> Test Funcion </button>
   <button id="btnResumen" class="bar-btn azul">📊 Resumen</button>
   <button id="btnLogout" class="bar-btn rojo">🚪 Salir</button>
 </div>
@@ -2024,17 +2046,31 @@ window.addEventListener("beforeunload",e=>{
 document.getElementById("btnLogout").addEventListener("click",()=>{
   bloqueoSalida=false;
 });
-// 🎛️ Alternar entre Pantalla de Venta y Pantalla de Carrito
+/* ===========================================================
+   🧪 BOTÓN "TEST FUNCIÓN" PARA ABRIR PANTALLA DE PRUEBAS
+   =========================================================== */
+const btnTestFuncion = document.getElementById("btnVerCarrito");
 const pantallaVenta = document.getElementById("pantallaVenta");
-const pantallaCarrito = document.getElementById("pantallaCarrito");
-const btnVerCarrito = document.getElementById("btnVerCarrito");
+const pantallaTest = document.getElementById("pantallaTest");
+const carritoContainer = document.getElementById("carrito-container");
 
-btnVerCarrito.addEventListener("click", () => {
+// 🧩 Mostrar pantalla de pruebas
+btnTestFuncion.addEventListener("click", () => {
   pantallaVenta.style.display = "none";
-  pantallaCarrito.style.display = "block";
-  renderDebounced(); // Versión optimizada
+  if (carritoContainer) carritoContainer.style.display = "none";
+  pantallaTest.style.display = "block";
+  beep(850, 0.1);
+  toast("🧪 Modo de Pruebas Activo", "#f59e0b");
 });
 
+// 🧩 Volver al POS principal
+document.getElementById("btnVolverVenta").addEventListener("click", () => {
+  pantallaTest.style.display = "none";
+  pantallaVenta.style.display = "flex";
+  if (carritoContainer) carritoContainer.style.display = "block";
+  beep(950, 0.1);
+  toast("✅ Regresando al POS", "#16a34a");
+});
 
 </script>
 <!-- 🔢 MODAL CANTIDAD PERSONALIZADO -->
@@ -2096,6 +2132,99 @@ btnVerCarrito.addEventListener("click", () => {
   }
 
 </style>
+<script>
+/* ===========================================================
+   🧪 BLOQUE DE PRUEBAS FUNCIONALES DEL SISTEMA POS
+   =========================================================== */
+const testResult = document.getElementById("testResult");
+
+// 📷 Prueba de cámara
+document.getElementById("btnTestCam").addEventListener("click", async () => {
+  testResult.innerHTML = "🎥 Abriendo cámara...";
+  try {
+    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    testResult.innerHTML = "✅ Cámara detectada correctamente.";
+    stream.getTracks().forEach(track => track.stop());
+    beep(950, 0.1);
+  } catch (err) {
+    console.error("❌ Error cámara:", err);
+    testResult.innerHTML = "❌ No se pudo acceder a la cámara.<br>Verifica permisos o conexión.";
+    toast("❌ No se pudo abrir la cámara", "#c0392b");
+  }
+});
+
+
+
+// 🖨️ Prueba de impresora térmica
+document.getElementById("btnTestPrinter").addEventListener("click", () => {
+  testResult.innerHTML = "🖨️ Enviando ticket de prueba...";
+  const ticketPrueba = `
+*** PRUEBA DE IMPRESORA POS ***
+Fecha: ${new Date().toLocaleString()}
+Sucursal: PROVEEDORA MATRIZ
+-----------------------------
+Artículo         Cant  Precio
+PRUEBA IMPRESIÓN  1.00   $1.00
+-----------------------------
+TOTAL: $1.00
+-----------------------------
+✅ Impresora funcionando correctamente.
+`;
+  try {
+    if (window.InnerPrinter && typeof window.InnerPrinter.printText === "function") {
+      window.InnerPrinter.printText(ticketPrueba);
+      testResult.innerHTML = "✅ Impresora (InnerPrinter) respondió correctamente.";
+      beep(600, 0.15);
+    } else if (/Android/i.test(navigator.userAgent)) {
+      const encoded = encodeURIComponent(ticketPrueba);
+      window.location.href = `rawbt:print?data=${encoded}`;
+      testResult.innerHTML = "✅ Ticket enviado a RawBT. Revisa la app de impresión.";
+      beep(600, 0.15);
+    } else {
+      const w = window.open("", "_blank");
+      w.document.write(`<pre>${ticketPrueba}</pre>`);
+      w.print();
+      w.close();
+      testResult.innerHTML = "✅ Impresión del navegador ejecutada.";
+      beep(600, 0.15);
+    }
+  } catch (err) {
+    console.error("❌ Error impresora:", err);
+    testResult.innerHTML = "❌ Fallo al imprimir.<br>Verifica conexión Bluetooth o RawBT.";
+    toast("❌ Error de impresión", "#c0392b");
+  }
+});
+
+// 📍 Prueba de geolocalización
+document.getElementById("btnTestGPS").addEventListener("click", async () => {
+  testResult.innerHTML = "📡 Obteniendo ubicación...";
+  if (!navigator.geolocation) {
+    testResult.innerHTML = "❌ Geolocalización no soportada por este dispositivo.";
+    return;
+  }
+
+  navigator.geolocation.getCurrentPosition(
+    pos => {
+      const { latitude, longitude } = pos.coords;
+      testResult.innerHTML = `
+        ✅ Ubicación obtenida:<br>
+        Lat: ${latitude.toFixed(6)}<br>
+        Lng: ${longitude.toFixed(6)}<br>
+        <a href="https://maps.google.com/?q=${latitude},${longitude}" target="_blank">
+          🌍 Ver en Google Maps
+        </a>
+      `;
+      beep(950, 0.15);
+    },
+    err => {
+      console.error("❌ Error GPS:", err);
+      testResult.innerHTML = "❌ No se pudo obtener ubicación.<br>Verifica permisos de GPS.";
+      toast("⚠️ Sin acceso a ubicación", "#f59e0b");
+    },
+    { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+  );
+});
+</script>
 
 </body>
 </html>
