--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -267,6 +267,19 @@ body {
   </div>
 </div>
 
+<!-- 🧪 SECCIÓN DE PRUEBAS DEL SISTEMA (OCULTA POR DEFECTO) -->
+<section id="pantallaTest" style="display:none; padding:15px; background:#fff;
+  border-radius:14px; box-shadow:0 2px 10px rgba(0,0,0,.1); margin:15px;">
+  <h2 style="text-align:center;color:#00416A;">🔧 Pruebas del Sistema POS</h2>
+
+  <button id="btnTestCam" class="btn" style="background:#0c6cbd;margin:6px 0;">📷 Probar Cámara</button><br>
+  <button id="btnTestPrinter" class="btn" style="background:#16a34a;margin:6px 0;">🖨️ Probar Impresora</button><br>
+  <button id="btnTestGPS" class="btn" style="background:#f59e0b;margin:6px 0;">📍 Probar GPS</button><br>
+
+  <div id="testResult" style="margin-top:10px;color:#333;font-size:14px;text-align:center;"></div>
+
+  <button id="btnVolverVenta" class="btn" style="margin-top:15px;background:#00416A;">⬅️ Volver a Ventas</button>
+</section>
 
   <div class="totals">
     <div class="row muted"><span>Subtotal</span><span id="lblSubtotal">$0.00</span></div>
@@ -278,26 +291,6 @@ body {
     <button class="btn" id="btnCobrar">Cobrar</button>
   </div>
 </section>
-<!-- 🧪 BLOQUE DE PRUEBAS DE SISTEMA -->
-<div id="testTools" style="padding:10px;text-align:center;background:#fff;border-radius:12px;
-                           box-shadow:0 2px 8px rgba(0,0,0,0.15);margin:10px;">
-  <h3 style="color:#00416A;margin-bottom:10px;">🔧 Pruebas del Sistema POS</h3>
-
-  <button id="btnTestCam" class="btn" 
-          style="background:linear-gradient(180deg,#0c6cbd,#00416A);margin:6px 0;">
-          📷 Probar Cámara</button><br>
-
-  <button id="btnTestPrinter" class="btn"
-          style="background:linear-gradient(180deg,#16a34a,#0d732e);margin:6px 0;">
-          🖨️ Probar Impresora</button><br>
-
-  <button id="btnTestGPS" class="btn"
-          style="background:linear-gradient(180deg,#f59e0b,#b45309);margin:6px 0;">
-          📍 Probar Geolocalización</button>
-
-  <div id="testResult" style="margin-top:12px;color:#333;font-size:14px;"></div>
-</div>
-
 
 <!-- 📱 BARRA INFERIOR FIJA PARA BOTONES -->
 <div id="bottomBar">
