--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1500,6 +1500,27 @@ $("#btnConfirmarCobro").onclick = async () => {
 async function guardarVentaEnFirestore(v) {
   try {
     const ref = collection(db, "ventas_rutav2");
+        // 🧮 Cálculo de impuestos por artículo antes de guardar
+    v.detalle = v.detalle.map(it => {
+      const ivaPct = Number(it.departamento_info?.iva || 0);
+      const iepsPct = Number(it.departamento_info?.ieps || 0);
+      const base = Number(it.importe || 0);
+
+      const ivaCalc = +(base * ivaPct / 100).toFixed(2);
+      const iepsCalc = +(base * iepsPct / 100).toFixed(2);
+
+      return {
+        ...it,
+        iva_calculado: ivaCalc,
+        ieps_calculado: iepsCalc
+      };
+    });
+
+    // 🧾 Sumar total de impuestos al resumen financiero
+    const totalIVA = v.detalle.reduce((acc, x) => acc + (x.iva_calculado || 0), 0);
+    const totalIEPS = v.detalle.reduce((acc, x) => acc + (x.ieps_calculado || 0), 0);
+    v.resumen_financiero.impuestos = +(totalIVA + totalIEPS).toFixed(2);
+
     const docRef = await addDoc(ref, v);
     console.log("✅ Venta guardada UNA VEZ en Firestore:", v.folio, "ID:", docRef.id);
     return docRef.id;
