--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1956,8 +1956,8 @@ function toast(msg, color = "#0c6cbd") {
   setTimeout(()=>aviso.style.opacity=1,50);
   setTimeout(()=>{aviso.style.opacity=0;setTimeout(()=>aviso.remove(),400)},2500);
 }
-
-})(); // ✅ cierre del async
+// ✅ cierre del async
+})(); 
 
 </script>
 
