--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2057,62 +2057,83 @@ if (btnResumen) {
 
 </script>
 
-<!-- 📷 BLOQUE 9: CONTROL DE ESCÁNER QR -->
+<!-- 📷 BLOQUE 9: CONTROL DE ESCÁNER QR (UNIFICADO Y ESTABLE) -->
 <script>
-window.addEventListener("load",()=>{
-  const btnCam=document.getElementById("btnCam");
-  const camDiv=document.getElementById("qrReaderContainer");
-  const cerrarCam=document.getElementById("cerrarCam");
-  let html5QrCode=null;
+window.addEventListener("load", () => {
+  const btnCam = document.getElementById("btnCam");
+  const btnTestCam = document.getElementById("btnTestCam");
+  const cerrarCam = document.getElementById("cerrarCam");
+  const camDiv = document.getElementById("qrReaderContainer");
+  const readerDiv = document.getElementById("reader");
 
-  btnCam.addEventListener("click",()=>{
-    camDiv.style.display="flex";
-    const readerDiv=document.getElementById("reader");
-    if(!readerDiv){ alert("No se encontró el contenedor del lector (#reader)"); return; }
+  let html5QrCode = null;
+  let camActiva = false;
 
-    html5QrCode=new Html5Qrcode("reader");
- html5QrCode.start(
-  { facingMode:"environment" },
-  { fps:10, qrbox:250 },
-  (decodedText) => {
-    console.log("📦 Código detectado por cámara:", decodedText);
+  // 🧩 Función central para iniciar cámara (sirve para POS y Test)
+  async function iniciarCamara(modo = "venta") {
+    try {
+      if (camActiva) return;
+      camActiva = true;
+      camDiv.style.display = "flex";
+      readerDiv.innerHTML = ""; // limpia contenedor
 
-    // 🔊 Confirmación auditiva
-    beep(950, 0.1);
+      html5QrCode = new Html5Qrcode("reader");
+      await html5QrCode.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        (decodedText) => {
+          console.log("📦 Código detectado:", decodedText);
+          beep(950, 0.1);
 
-    html5QrCode.stop().then(() => {
+          html5QrCode.stop().then(() => {
+            camDiv.style.display = "none";
+            camActiva = false;
+
+            if (modo === "venta") {
+              procesarCodigoEscaneado(decodedText.trim());
+              toast("✅ Producto agregado", "#16a34a");
+            } else {
+              const testResult = document.getElementById("testResult");
+              if (testResult) {
+                testResult.innerHTML = `✅ Escaneo exitoso:<br><strong>${decodedText}</strong>`;
+              }
+            }
+          }).catch(err => {
+            console.warn("⚠️ No se pudo detener cámara:", err);
+            camDiv.style.display = "none";
+            camActiva = false;
+          });
+        },
+        (errorMessage) => {
+          // mensajes menores de lectura
+        }
+      );
+    } catch (err) {
+      console.error("❌ Error iniciando cámara:", err);
+      toast("❌ No se pudo abrir la cámara", "#c0392b");
       camDiv.style.display = "none";
-      procesarCodigoEscaneado(decodedText.trim());
+      camActiva = false;
+    }
+  }
 
-      const ok = document.createElement("div");
-      ok.textContent = "✅ Producto agregado";
-      ok.style.cssText = `
-        position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-        background:rgba(0,128,0,.9);color:#fff;padding:15px 20px;
-        border-radius:12px;font-weight:700;font-size:18px;z-index:5000;
-        box-shadow:0 4px 12px rgba(0,0,0,.3);opacity:0;transition:opacity .3s;
-      `;
-      document.body.appendChild(ok);
-      setTimeout(()=>ok.style.opacity=1,80);
-      setTimeout(()=>{ok.style.opacity=0;setTimeout(()=>ok.remove(),400)},2000);
-    }).catch(err => {
-      console.warn("⚠️ No se pudo detener cámara:", err);
+  // 🎥 Botón principal del POS
+  if (btnCam) btnCam.addEventListener("click", () => iniciarCamara("venta"));
+
+  // 🧪 Botón del test de cámara (usa la misma función)
+  if (btnTestCam) btnTestCam.addEventListener("click", () => iniciarCamara("test"));
+
+  // ❌ Botón de cerrar cámara
+  if (cerrarCam) {
+    cerrarCam.addEventListener("click", async () => {
+      try {
+        if (html5QrCode) await html5QrCode.stop();
+      } catch (err) {
+        console.warn("⚠️ No se pudo detener cámara:", err);
+      }
       camDiv.style.display = "none";
-      procesarCodigoEscaneado(decodedText.trim());
+      camActiva = false;
     });
-  },
-  (errorMessage) => console.log("⚠️", errorMessage)
-)
-.catch(err => {   // ✅ ahora correctamente encadenado
-  alert("No se pudo abrir la cámara: " + err);
-  camDiv.style.display = "none";
-});
-  });
-
-  cerrarCam.addEventListener("click",()=>{
-    if(html5QrCode) html5QrCode.stop().then(()=>camDiv.style.display="none");
-    else camDiv.style.display="none";
-  });
+  }
 });
 </script>
 
